[UPD] added the header and title

--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Booleando</title>
 </head>
 <body>
     <!--header-->
     <header>
-
+      <div class="container">
+        <div class="row">
+            <div class="col-25">
+                <div class="content">
+                    <ul>
+                        <li>Donna</li>
+                        <li>Uomo</li>
+                        <li>Bambini</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-50">
+                <div class="content">
+                  <img src="./img/boolean-logo.png" alt="logo">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="content">
+                    <i class="fa-regular fa-user"></i>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </div>
+            </div>
+        </div>
+      </div>
     </header>
     <!--main-->
     <main>
@@ -17,7 +42,7 @@
     </main>
     <!--footer-->
     <footer>
-        
+
     </footer>
 </body>
 </html>
