--- a/index.html
+++ b/index.html
@@ -42,32 +42,32 @@
         <div class="row">
             <div class="col-33">
                 <div class="content-main">
-
+                 <img src="./img/1.webp" alt="img">
                 </div>
             </div>
             <div class="col-33">
                 <div class="content-main">
-
+                 <img src="./img/2.webp" alt="img">
                 </div>
             </div>
             <div class="col-33">
                 <div class="content-main">
-
+                  <img src="./img/3.webp" alt="img">
                 </div>
             </div>
             <div class="col-33">
                 <div class="content-main">
-
+                    <img src="./img/4.webp" alt="img">
                 </div>
             </div>
             <div class="col-33">
                 <div class="content-main">
-
+                    <img src="./img/5.webp" alt="img">
                 </div>
             </div>
             <div class="col-33">
                 <div class="content-main">
-
+                    <img src="./img/6.webp" alt="img">
                 </div>
             </div>
             
