[UPD] completed the section footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-50">
+            <div class="col-51">
                 <div class="content">
                   <img src="./img/boolean-logo.png" alt="logo">
                 </div>
@@ -126,7 +126,26 @@
     </main>
     <!--footer-->
     <footer>
-
+       <div class="container-footer">
+        <div class="row">
+            <div class="col-50">
+                <div class="content-footer">
+                    <p class="white">Booleando s.r.l</p>
+                    <p class="white">Informazioni legali informativa sulla privacy diritti di recesso</p>
+                </div>
+            </div>
+                <div class="col-50">
+                    <div class="content-footer-dx">
+                     <p class="white2">Trovaci anche su</p>
+                     <i class="fa-brands fa-square-twitter"></i>
+                     <i class="fa-brands fa-square-facebook"></i>
+                     <i class="fa-brands fa-instagram"></i>
+                     <i class="fa-brands fa-pinterest-p"></i>
+                     <i class="fa-brands fa-youtube"></i>
+                    </div>
+            </div>
+        </div>
+       </div>
     </footer>
 </body>
 </html>
