--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div class="row">
             <div class="col-33">
                 <div class="content-main">
-                 <img src="./img/1.webp" alt="img">
+                 <img class="d-block" src="./img/1.webp" alt="img">
+                 <img class="d-none" src="./img/1b.webp" alt="img">
                  <div class="heart">&hearts;</div>
                  <div class="labels">
                     <div class="label bg-red">-60%</div>
@@ -58,7 +59,8 @@
             </div>
             <div class="col-33">
                 <div class="content-main">
-                 <img src="./img/2.webp" alt="img">
+                 <img class="d-block" src="./img/2.webp" alt="img">
+                 <img class="d-none" src="./img/2b.webp" alt="img">
                  <div class="heart">&hearts;</div>
                  <div class="labels">
                     <div class="label bg-red">-30%</div>
@@ -71,7 +73,8 @@
             </div>
             <div class="col-33">
                 <div class="content-main">
-                  <img src="./img/3.webp" alt="img">
+                  <img class="d-block" src="./img/3.webp" alt="img">
+                  <img class="d-none" src="./img/3b.webp" alt="img">
                   <div class="heart">&hearts;</div>
                   <div class="labels">
                     <div class="label bg-red">-30%</div>
@@ -84,7 +87,8 @@
             </div>
             <div class="col-33">
                 <div class="content-main">
-                    <img src="./img/4.webp" alt="img">
+                    <img class="d-block" src="./img/4.webp" alt="img">
+                    <img class="d-none" src="./img/4b.webp" alt="img">
                     <div class="heart">&hearts;</div>
                     <div class="labels">
                         <div class="label bg-red">-60%</div>
@@ -98,7 +102,8 @@
             </div>
             <div class="col-33">
                 <div class="content-main">
-                    <img src="./img/5.webp" alt="img">
+                    <img class="d-block" src="./img/5.webp" alt="img">
+                    <img class="d-none" src="./img/5b.webp" alt="img">
                     <div class="heart">&hearts;</div>
                 </div>
                 <p>Maya Deluxe</p>
@@ -107,7 +112,8 @@
             </div>
             <div class="col-33">
                 <div class="content-main">
-                    <img src="./img/6.webp" alt="img">
+                    <img class="d-block" src="./img/6.webp" alt="img">
+                    <img class="d-none" src="./img/6b.webp" alt="img">
                     <div class="heart">&hearts;</div>
                     <div class="labels">
                         <div class="label bg-green">sostenibilita</div>
